<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">LiveStreamSales</string>
    <string name="menu_exit_exit_button_title">Закрыть</string>
    <string name="product_specification_name_color">Цвет</string>
    <string name="player_error_generic">Воспроизведение не удалось</string>
    <string name="player_error_querying_decoders">Невозможно запросить декодеры устройства</string>
    <string name="player_error_no_secure_decoder">
        Это устройство не обеспечивает безопасный декодер для <xliff:g id="mime_type">%1$s</xliff:g>
    </string>
    <string name="player_error_no_decoder">
        Это устройство не предоставляет декодер для <xliff:g id="mime_type">%1$s</xliff:g>
    </string>
    <string name="player_error_instantiating_decoder">
        Не удается создать экземпляр декодера <xliff:g id="decoder_name">%1$s</xliff:g>
    </string>
    <string name="empty_fragment_text">Скоро…</string>
    <string name="greeting_fragment_title">Добро пожаловать</string>
    <string name="greeting_fragment_next_button">Далее</string>
    <string name="greeting_fragment_start_button">Начать</string>
    <string name="greeting_fragment_skip_button">Пропустить</string>
    <string name="greeting_fragment_page1_title">Добро пожаловать!</string>
    <string name="greeting_fragment_page1_description">@string/template_text</string>
    <string name="greeting_fragment_page2_title">Смотри и покупай!</string>
    <string name="greeting_fragment_page2_description">
        Смотри прямые эфиры, в которых блоггеры будут показывать товары с уникальной ценой.
        Совершай покупки не отключаясь от эфира
    </string>
    <string name="greeting_fragment_page3_title">Регистрируй карту!</string>
    <string name="greeting_fragment_page3_description">
        Регистрируй банковскую карту, чтобы совершать покупки не прерывая прямой эфир
    </string>
    <string name="greeting_fragment_page4_title">Покупай с выгодой!</string>
    <string name="greeting_fragment_page4_description">@string/template_text</string>
    <string name="template_text">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
    </string>
    <string name="fragment_home_destination_title">@string/app_name</string>
    <string name="fragment_home_main_page_button">Главная</string>
    <string name="fragment_home_notifications_button">Напоминания</string>
    <string name="fragment_home_my_orders_button">Мои заказы</string>
    <string name="fragment_home_profile_button">Профиль</string>
    <string name="fragment_home_live">● Прямой эфир</string>
    <string name="fragment_home_announcement">Анонс</string>
    <string name="fragment_home_coming_soon">Скоро в эфире</string>
    <string name="fragment_home_promo_banner_text">Привяжи карту и получи бонус!</string>
    <string name="fragment_live_broadcasts_title">Прямая трансляция</string>
    <string name="dialog_product_order_title">Заказ</string>
    <string name="dialog_product_order_specifications_title">Характеристики:</string>
    <string name="dialog_product_order_products_amount">Количество</string>
    <string name="dialog_product_order_product_color">Цвет</string>
    <string name="dialog_product_order_add_to_cart">Добавить</string>
    <string name="dialog_product_order_buy">Купить</string>
    <string name="dialog_product_order_sum">Итого:</string>
    <string name="dialog_product_order_price">%s руб.</string>
    <string name="dialog_products_are_ordered_destination_title">Благодарим за покупку</string>
    <string name="dialog_products_are_ordered_title">Благодарим за покупку!</string>
    <string name="dialog_products_are_ordered_description">
        Заказ был успешно оформлен.
        Выберите дату и время доставки в разделе \"Мои заказы\"
    </string>
    <string name="dialog_products_are_ordered_confirm_button">Понятно</string>
    <string name="dialog_need_payment_information_destination_title">Привяжите карту</string>
    <string name="dialog_need_payment_information_title">Привяжите карту!</string>
    <string name="dialog_need_payment_information_description">
        Чтобы продолжить, необходимо привязать карту
    </string>
    <string name="dialog_need_payment_information_confirm_button">Продолжить</string>
    <string name="dialog_order_is_confirmed_destination_title">Заказ подтверждён</string>
    <string name="dialog_order_is_confirmed_title_text">Заказ подтверждён</string>
    <string name="dialog_order_is_confirmed_ok_button">Ок</string>
    <string name="fragment_phone_number_input_title">Вход</string>
    <string name="fragment_phone_number_input_enter_phone_number">
        Введите ваш номер телефона
    </string>
    <string name="fragment_phone_number_input_phone_number_hint">Номер телефона</string>
    <string name="fragment_phone_number_input_phone_number_prefix">+7 </string>
    <string name="fragment_phone_number_input_send_code_button">Отправить код</string>
    <string name="fragment_phone_number_input_new_code_message">
        Получить новый код можно через %s
    </string>
    <string name="fragment_phone_number_input_new_code_message_tools">
        Получить новый код можно через
        <font color="#FF0000">00:47</font>
    </string>
    <string name="activity_authorization_code_request_error">
        Не удалось запросить код подтверждения
    </string>
    <string name="fragment_phone_number_confirmation_title">Подтверждение</string>
    <string name="fragment_phone_number_confirmation_enter_code">Введите код</string>
    <string name="fragment_phone_number_confirmation_code_is_sent">
        Мы отправили код на номер %s
    </string>
    <string name="fragment_phone_number_confirmation_code_is_sent_tools">
        Мы отправили код на номер
        <font color="#FF0000">+ 7 (999) 999 99 99</font>
    </string>
    <string name="fragment_phone_number_confirmation_new_code_message">
        Получить новый код можно через %s
    </string>
    <string name="fragment_phone_number_confirmation_new_code_message_tools">
        Получить новый код можно через
        <font color="#FF0000">00:47</font>
    </string>
    <string name="fragment_phone_number_confirmation_request_code">Получить новый код</string>
    <string name="fragment_phone_number_confirmation_terms_of_the_offer_text">
        Я ознакомлен, согласен и принимаю <annotation tag="">условия оферты</annotation>
    </string>
    <string name="fragment_phone_number_confirmation_terms_of_the_offer_text_tools">
        Я ознакомлен, согласен и принимаю
        <font color="#FF0000">
            условия оферты
        </font>
    </string>
    <string name="fragment_registration_user_personal_information_title">Личные данные</string>
    <string name="fragment_registration_user_personal_information_continue_button">
        Продолжить
    </string>
    <string name="fragment_registration_user_personal_information_field_is_required">
        Обязательное поле
    </string>
    <string name="fragment_registration_user_personal_information_field_contains_illegal_symbols">
        Поле содержит недопустимые символы
    </string>
    <string name="fragment_registration_user_personal_information_field_starts_with_whitespace">
        @string/fragment_profile_field_starts_with_whitespace
    </string>
    <string name="fragment_registration_user_personal_information_field_ends_with_whitespace">
        @string/fragment_profile_field_ends_with_whitespace
    </string>
    <string name="fragment_registration_user_personal_information_field_repetitive_whitespaces">
        @string/fragment_profile_field_repetitive_whitespaces
    </string>
    <string name="fragment_registration_user_personal_information_field_length_is_too_short">
        Минимальная длина поля %d
    </string>
    <string name="fragment_registration_user_personal_information_field_length_is_too_long">
        Максимальная длина поля %d
    </string>
    <string name="fragment_registration_user_personal_information_email_has_wrong_format">
        Недопустимый формат почты
    </string>
    <string name="fragment_payment_card_information_destination_title">Привязка карты</string>
    <string name="fragment_payment_card_information_description">
        Привяжите свою карту, чтобы делать заказ не отрываясь от прямого эфира
    </string>
    <string name="fragment_payment_card_information_title_text">Привязанная карта:</string>
    <string name="fragment_payment_card_information_number_text">•••• •••• •••• %s</string>
    <string name="fragment_payment_card_information_card_will_be_bound_soon">
        Карта скоро будет привязана
    </string>
    <string name="fragment_payment_card_information_link_card_button">Привязать карту</string>
    <string name="fragment_payment_card_information_link_another_card_button">
        Привязать другую карту
    </string>
    <string name="fragment_payment_card_information_skip_button">Привязать позже</string>
    <string name="fragment_payment_card_information_yookassa_card_binding_title">
        Привязка карты
    </string>
    <string name="fragment_payment_card_information_yookassa_card_binding_subtitle">
        Списание 1 руб. для привязки карты
    </string>
    <string name="fragment_payment_card_information_binding_default_error">
        Не удалось привязать карту
    </string>
    <string name="fragment_payment_card_information_binding_3ds_canceled_error">
        Подтверждение карты было отменено
    </string>
    <string name="fragment_payment_card_information_binding_3ds_unknown_error">
        Не удалось подтвердить привязку карты
    </string>
    <string name="fragment_payment_card_information_binding_3ds_host_lookup_error">
        Ошибка поиска имени хоста сервера или прокси-сервера
    </string>
    <string name="fragment_payment_card_information_binding_3ds_unsupported_auth_scheme_error">
        Схема авторизации не поддерживается
    </string>
    <string name="fragment_payment_card_information_binding_3ds_authentication_error">
        3ds не удалось авторизовать пользователся на сервере
    </string>
    <string name="fragment_payment_card_information_binding_3ds_proxy_authentication_error">
        3ds не удалось авторизовать пользователся на прокси-сервере
    </string>
    <string name="fragment_payment_card_information_binding_3ds_connect_error">
        3ds не удалось подключиться к серверу
    </string>
    <string name="fragment_payment_card_information_binding_3ds_io_error">
        3ds не удалось отправить или получить данные с сервера
    </string>
    <string name="fragment_payment_card_information_binding_3ds_timeout_error">
        Время подключения истекло
    </string>
    <string name="fragment_payment_card_information_binding_3ds_redirect_loop_error">
        Ошибка. Слишком много перенаправлений
    </string>
    <string name="fragment_payment_card_information_binding_3ds_unsupported_scheme_error">
        Ошибка. Схема URI не поддерживается
    </string>
    <string name="fragment_payment_card_information_binding_3ds_failed_ssl_handshake_error">
        3ds не удалось установить безопасное соединение
    </string>
    <string name="fragment_payment_card_information_binding_3ds_bad_url_error">
        3ds получил некорректную ссылку подтверждения
    </string>
    <string name="fragment_order_information_destination_title">Информация о заказе</string>
    <string name="fragment_order_editing_destination_title">Подтверждение заказа</string>
    <string name="fragment_order_delivery_address_editing_destination_title">Адрес доставки</string>
    <string name="fragment_live_broadcasting_settings_destination_title">
        Настройки трансляции
    </string>
    <string name="fragment_live_broadcasting_destination_title">Трансляция</string>
</resources>