<?xml version="1.0" encoding="utf-8"?>

<tv.wfc.contentloader.ContentLoaderView
    android:id="@+id/contentLoader"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/screenPadding"
    android:clipToPadding="false">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/enterPhoneNumberText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fragment_phone_number_input_enter_phone_number"
        android:textSize="@dimen/textSize_big"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneNumberLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/contentMargin"
        android:hint="@string/fragment_phone_number_input_phone_number_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterPhoneNumberText"
        app:prefixText="@string/fragment_phone_number_input_phone_number_prefix"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sendCodeButton"
        style="@style/Theme.LiveStreamSales.BigMaterialButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/contentMargin"
        android:text="@string/fragment_phone_number_input_send_code_button"
        android:textAllCaps="false"
        android:enabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneNumberLayout"
        tools:enabled="true"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/newCodeTimerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/contentMargin"
        android:text="@string/fragment_phone_number_input_new_code_message"
        android:textColor="@color/colorSecondaryText"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sendCodeButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        tools:text="@string/fragment_phone_number_input_new_code_message_tools"
        tools:visibility="visible"/>

</tv.wfc.contentloader.ContentLoaderView>