<?xml version="1.0" encoding="utf-8"?>
<tv.wfc.contentloader.ContentLoaderView
    android:id="@+id/contentLoader"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/screenPadding"
    android:clipToPadding="false">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/enterCodeText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fragment_phone_number_confirmation_enter_code"
        android:textSize="@dimen/headerTextSize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/codeIsSentText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/contentMargin"
        android:text="@string/fragment_phone_number_confirmation_code_is_sent"
        android:textColor="@color/colorSecondaryText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterCodeText"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/fragment_phone_number_confirmation_code_is_sent_tools"/>

    <tv.wfc.codeview.BoxDividedEditText
        android:id="@+id/confirmationCodeEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/contentMargin"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/codeIsSentText"
        app:squareBoxes="true"
        app:gapBetweenBoxes="8dp"
        tools:text="12"
        tools:visibility="visible"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/newCodeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/contentMargin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmationCodeEditText">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/newCodeTimerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_phone_number_confirmation_new_code_message"
            android:textColor="@color/colorSecondaryText"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0"
            tools:text="@string/fragment_phone_number_confirmation_new_code_message_tools"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/requestNewCodeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fragment_phone_number_confirmation_request_code"
            android:textColor="@color/colorSecondaryText"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/termsOfTheOfferText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fragment_phone_number_confirmation_terms_of_the_offer_text"
        android:textColor="@color/colorSecondaryText"
        android:textAlignment="center"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newCodeLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintVertical_bias="0.1"
        tools:text="@string/fragment_phone_number_confirmation_terms_of_the_offer_text_tools" />

</tv.wfc.contentloader.ContentLoaderView>