<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph_root"
    app:startDestination="@id/homeDestination">

    <action
        android:id="@+id/action_global_phoneNumberInputDestination"
        app:destination="@id/phoneNumberInputDestination"
        app:enterAnim="@anim/fade_in"
        app:exitAnim="@anim/fade_out"
        app:popEnterAnim="@anim/fade_in"
        app:popExitAnim="@anim/fade_out"/>

    <fragment
        android:id="@+id/phoneNumberInputDestination"
        android:name="tv.wfc.livestreamsales.features.authorization.phonenumberinput.ui.PhoneNumberInputFragment"
        android:label="@string/fragment_phone_number_input_title"
        tools:layout="@layout/fragment_phone_number_input">

        <action
            android:id="@+id/action_phoneNumberInputDestination_to_phoneNumberConfirmationDestination"
            app:destination="@id/phoneNumberConfirmationDestination"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/stay_as_is"
            app:popEnterAnim="@anim/stay_as_is"
            app:popExitAnim="@anim/slide_out_right"/>

    </fragment>

    <fragment
        android:id="@+id/phoneNumberConfirmationDestination"
        android:name="tv.wfc.livestreamsales.features.authorization.phonenumberconfirmation.ui.PhoneNumberConfirmationFragment"
        android:label="@string/fragment_phone_number_confirmation_title"
        tools:layout="@layout/fragment_phone_number_confirmation">

        <action
            android:id="@+id/action_exitAuthorization"
            app:popUpTo="@id/phoneNumberInputDestination"
            app:popUpToInclusive="true"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />

        <action
            android:id="@+id/action_phoneNumberConfirmationDestination_to_registrationUserPersonalInformationDestination"
            app:destination="@id/registrationUserPersonalInformationDestination"
            app:popUpTo="@id/phoneNumberInputDestination"
            app:popUpToInclusive="false"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/stay_as_is"
            app:popEnterAnim="@anim/stay_as_is"
            app:popExitAnim="@anim/slide_out_right"/>

    </fragment>

    <fragment
        android:id="@+id/registrationUserPersonalInformationDestination"
        android:label="@string/fragment_registration_user_personal_information_title"
        android:name="tv.wfc.livestreamsales.features.authorization.userpersonalinformation.ui.RegistrationUserPersonalInformationFragment"
        tools:layout="@layout/fragment_registration_user_personal_information">

        <argument
            android:name="isRegistrationFlow"
            android:defaultValue="false"
            app:argType="boolean"/>

        <argument
            android:name="token"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />

        <action
            android:id="@+id/action_registrationUserPersonalInformationDestination_to_registrationPaymentCardInformationDestination"
            app:destination="@id/paymentCardInformationDestination"
            app:popUpTo="@id/phoneNumberInputDestination"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/stay_as_is"
            app:popEnterAnim="@anim/stay_as_is"
            app:popExitAnim="@anim/slide_out_right"/>

    </fragment>

    <fragment
        android:id="@+id/paymentCardInformationDestination"
        android:label="@string/fragment_payment_card_information_destination_title"
        android:name="tv.wfc.livestreamsales.features.paymentcardinformation.ui.PaymentCardInformationFragment"
        tools:layout="@layout/fragment_payment_card_information">

    </fragment>

    <fragment
        android:id="@+id/homeDestination"
        android:name="tv.wfc.livestreamsales.features.home.ui.HomeFragment"
        android:label="@string/fragment_home_destination_title"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_homeDestination_to_liveBroadcastDestination"
            app:destination="@id/liveBroadcastDestination"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/stay_as_is"
            app:popEnterAnim="@anim/stay_as_is"
            app:popExitAnim="@anim/slide_out_right"/>

        <action
            android:id="@+id/action_to_paymentCardInformationDestination"
            app:destination="@id/paymentCardInformationDestination"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/stay_as_is"
            app:popEnterAnim="@anim/stay_as_is"
            app:popExitAnim="@anim/slide_out_right"/>

        <action
            android:id="@+id/action_to_needPaymentInformationDestination"
            app:destination="@id/needPaymentInformationDestination"/>

        <action
            android:id="@+id/action_to_orderInformationDestination"
            app:destination="@id/orderInformationDestination"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/stay_as_is"
            app:popEnterAnim="@anim/stay_as_is"
            app:popExitAnim="@anim/slide_out_right"/>

        <action
            android:id="@+id/action_to_orderEditingDestination"
            app:destination="@id/orderEditingDestination"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/stay_as_is"
            app:popEnterAnim="@anim/stay_as_is"
            app:popExitAnim="@anim/slide_out_right"/>

        <action
            android:id="@+id/toLiveBroadcastingSettingsDestination"
            app:destination="@id/liveBroadcastingSettingsDestination"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/stay_as_is"
            app:popEnterAnim="@anim/stay_as_is"
            app:popExitAnim="@anim/slide_out_right"/>

        <action
            android:id="@+id/toMyBroadcastsDestination"
            app:destination="@id/myBroadcastsDestination"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/stay_as_is"
            app:popEnterAnim="@anim/stay_as_is"
            app:popExitAnim="@anim/slide_out_right"/>

    </fragment>

    <fragment
        android:id="@+id/liveBroadcastDestination"
        android:name="tv.wfc.livestreamsales.features.livebroadcast.ui.LiveBroadcastFragment"
        android:label="@string/fragment_live_broadcasts_title"
        tools:layout="@layout/fragment_live_broadcast">

        <action
            android:id="@+id/action_liveBroadcastDestination_to_productOrderDestination"
            app:destination="@id/productOrderDestination"/>

        <argument
            android:name="liveBroadcastId"
            app:argType="long" />

    </fragment>

    <fragment
        android:id="@+id/orderInformationDestination"
        android:name="tv.wfc.livestreamsales.features.orderinformation.ui.OrderInformationFragment"
        android:label="@string/fragment_order_information_destination_title"
        tools:layout="@layout/fragment_order_information">

        <argument
            android:name="orderId"
            app:argType="long"/>

    </fragment>

    <fragment
        android:id="@+id/orderEditingDestination"
        android:name="tv.wfc.livestreamsales.features.orderediting.ui.orderediting.OrderEditingFragment"
        android:label="@string/fragment_order_editing_destination_title"
        tools:layout="@layout/fragment_order_editing">

        <argument
            android:name="orderId"
            app:argType="long"/>

        <action
            android:id="@+id/action_to_orderDeliveryAddressEditingDestination"
            app:destination="@id/orderDeliveryAddressEditingDestination"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/stay_as_is"
            app:popEnterAnim="@anim/stay_as_is"
            app:popExitAnim="@anim/slide_out_right"/>

        <action
            android:id="@+id/action_to_orderIsConfirmedDestination"
            app:destination="@id/orderIsConfirmedDestination"
            app:popUpTo="@id/orderEditingDestination"
            app:popUpToInclusive="true"/>

    </fragment>

    <dialog
        android:id="@+id/orderIsConfirmedDestination"
        android:name="tv.wfc.livestreamsales.features.orderisconfirmed.ui.OrderIsConfirmedDialogFragment"
        android:label="@string/dialog_order_is_confirmed_destination_title"
        tools:layout="@layout/dialog_order_is_confirmed">

    </dialog>

    <fragment
        android:id="@+id/orderDeliveryAddressEditingDestination"
        android:name="tv.wfc.livestreamsales.features.orderediting.ui.deliveryaddressediting.OrderDeliveryAddressEditingFragment"
        android:label="@string/fragment_order_delivery_address_editing_destination_title"
        tools:layout="@layout/fragment_order_delivery_address_editing">

    </fragment>

    <fragment
        android:id="@+id/liveBroadcastingSettingsDestination"
        android:name="tv.wfc.livestreamsales.features.liveBroadcastingSettingsDestination.ui.LiveBroadcastingSettingsFragment"
        android:label="@string/fragment_live_broadcasting_settings_destination_title"
        tools:layout="@layout/fragment_live_broadcasting_settings">

        <action
            android:id="@+id/toLiveBroadcastingDestination"
            app:destination="@id/liveBroadcastingDestination"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/stay_as_is"
            app:popEnterAnim="@anim/stay_as_is"
            app:popExitAnim="@anim/slide_out_right"/>

    </fragment>

    <fragment
        android:id="@+id/liveBroadcastingDestination"
        android:name="tv.wfc.livestreamsales.features.liveBroadcastingDestination.ui.LiveBroadcastingFragment"
        android:label="@string/fragment_live_broadcasting_destination_title"
        tools:layout="@layout/fragment_live_broadcasting">

        <argument
            android:name="serverAddress"
            app:argType="string"/>

        <argument
            android:name="serverPort"
            app:argType="integer"/>

        <argument
            android:name="streamKey"
            app:argType="string"/>

        <argument
            android:name="sourceUserName"
            app:argType="string"/>

        <argument
            android:name="sourcePassword"
            app:argType="string"/>

    </fragment>

    <fragment
        android:id="@+id/myBroadcastsDestination"
        android:name="tv.wfc.livestreamsales.features.my_broadcasts.ui.MyBroadcastsFragment"
        android:label="@string/fragment_my_broadcasts_destination_title"
        tools:layout="@layout/fragment_my_broadcasts"/>

    <dialog
        android:id="@+id/productOrderDestination"
        android:name="tv.wfc.livestreamsales.features.productorder.ui.ProductOrderDialogFragment"
        android:label="@string/dialog_product_order_title"
        tools:layout="@layout/dialog_product_order">

        <argument
            android:name="liveBroadcastId"
            app:argType="long" />

        <action
            android:id="@+id/actionToProductsAreOrderedDestination"
            app:destination="@id/productsAreOrderedDestination"
            app:popUpTo="@id/liveBroadcastDestination"
            app:popUpToInclusive="false"/>

    </dialog>

    <dialog
        android:id="@+id/productsAreOrderedDestination"
        android:name="tv.wfc.livestreamsales.features.productsareordered.ui.ProductsAreOrderedDialogFragment"
        android:label="@string/dialog_products_are_ordered_destination_title"
        tools:layout="@layout/dialog_products_are_ordered">

    </dialog>

    <dialog
        android:id="@+id/needPaymentInformationDestination"
        android:name="tv.wfc.livestreamsales.features.needpaymentinformation.ui.NeedPaymentInformationDialogFragment"
        android:label="@string/dialog_need_payment_information_destination_title"
        tools:layout="@layout/dialog_need_payment_information">

        <action
            android:id="@+id/action_to_paymentCardInformationDestination"
            app:destination="@id/paymentCardInformationDestination"
            app:popUpTo="@id/needPaymentInformationDestination"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/stay_as_is"
            app:popEnterAnim="@anim/stay_as_is"
            app:popExitAnim="@anim/slide_out_right"/>

    </dialog>

</navigation>